--- a/app/index.jade
+++ b/app/index.jade
@@ -68,6 +68,8 @@ html(lang="en")
        label(class="kjs-label FL" for="from") Change Radius:
        input(class="kjs-range FL" type="range" id="cricle" min="1" max='100' value="50" step="1" oninput="kjsmap.Form.RangeChanged(this,event)" onchange="kjsmap.Form.RangeChanged(this,event)")
     #map.map-wrap
+    script(src="js/binaryheap.js?v=5122")
+    script(src="js/astar.js?v=5122")
     script(src="js/map.js?v=5122")
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5YpNj7AK2gZ-iY5Fvz9vkhy2Ml1IwAmM&libraries=places&callback=initMap&language=en-US&region=in")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js")
